// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tool Schema Snapshots > Tool: check_typescript_project_for_problems > inputSchema JSON output should be stable 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "checks": {
      "description": "Specific checks to run. If not provided, runs all checks: lint:fix (which modifies files), typecheck, and typecheck:scripts.",
      "items": {
        "enum": [
          "lint:fix",
          "typecheck",
          "typecheck:scripts",
        ],
        "type": "string",
      },
      "type": "array",
    },
    "files": {
      "description": "Specific files to check. If provided, scopes the linting and type checking to these files only.",
      "items": {
        "description": "File path to check",
        "type": "string",
      },
      "type": "array",
    },
    "maxOutputLength": {
      "description": "Maximum length in characters for stdout and stderr fields. If output exceeds this, it will be truncated with a [...truncated] indicator. Ignored when summaryOnly=true.",
      "maximum": 9007199254740991,
      "minimum": 1,
      "type": "integer",
    },
    "summaryOnly": {
      "description": "If true, returns only exit codes, success status, and duration per check, omitting command and output fields. Useful for reducing output verbosity.",
      "type": "boolean",
    },
    "timeout": {
      "description": "Override timeout in milliseconds. Defaults to SDK context timeout. Use this for longer operations like running comprehensive tests.",
      "maximum": 9007199254740991,
      "minimum": 1,
      "type": "integer",
    },
  },
  "type": "object",
}
`;

exports[`Tool Schema Snapshots > Tool: check_typescript_project_for_problems > outputSchema JSON output should be stable 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "checks": {
      "additionalProperties": {
        "anyOf": [
          {
            "additionalProperties": false,
            "properties": {
              "duration": {
                "description": "Execution time in milliseconds",
                "maximum": 9007199254740991,
                "minimum": 0,
                "type": "integer",
              },
              "exitCode": {
                "const": 0,
                "type": "number",
              },
              "success": {
                "const": true,
                "type": "boolean",
              },
            },
            "required": [
              "success",
              "exitCode",
              "duration",
            ],
            "type": "object",
          },
          {
            "additionalProperties": false,
            "properties": {
              "duration": {
                "description": "Execution time in milliseconds",
                "maximum": 9007199254740991,
                "minimum": 0,
                "type": "integer",
              },
              "exitCode": {
                "exclusiveMinimum": 0,
                "maximum": 9007199254740991,
                "type": "integer",
              },
              "stderr": {
                "description": "Standard error output from the check",
                "type": "string",
              },
              "stdout": {
                "description": "Standard output from the check",
                "type": "string",
              },
              "success": {
                "const": false,
                "type": "boolean",
              },
            },
            "required": [
              "success",
              "exitCode",
              "stdout",
              "stderr",
              "duration",
            ],
            "type": "object",
          },
        ],
      },
      "description": "Map of check results keyed by check name (lint:fix, typecheck, or typecheck:scripts). Each result includes success status, exit code, and duration. Failures include stdout/stderr for diagnostics.",
      "propertyNames": {
        "type": "string",
      },
      "type": "object",
    },
    "hasProblems": {
      "description": "True if any check failed",
      "type": "boolean",
    },
  },
  "required": [
    "hasProblems",
    "checks",
  ],
  "type": "object",
}
`;

exports[`Tool Schema Snapshots > Tool: stage_selected_specs_and_create_atomic_commit > inputSchema JSON output should be stable 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "commitSummary": {
      "description": "Human summary describing WHY these changes were made. This will be validated and refined into a conventional commit message.",
      "minLength": 1,
      "type": "string",
    },
    "fileSpecs": {
      "description": "List of file specs to stage. Supports whole file paths and line ranges in the format file#L10 or file#L10-L20.",
      "items": {
        "description": "File spec to stage. Supports whole file path or range: file#L10 or file#L10-L20.",
        "minLength": 1,
        "type": "string",
      },
      "minItems": 1,
      "type": "array",
    },
    "skipChecksIfHuskyPresent": {
      "default": true,
      "description": "If true (default), skips integrated quality checks when husky pre-commit hooks are configured to avoid duplicate runs. Set to false to ignore husky and run checks regardless.",
      "type": "boolean",
    },
    "skipPreStagedCheck": {
      "description": "If true, allows execution even when there are already staged changes. If false or omitted, tool fails when pre-existing staged changes are detected.",
      "type": "boolean",
    },
  },
  "required": [
    "fileSpecs",
    "commitSummary",
    "skipChecksIfHuskyPresent",
  ],
  "type": "object",
}
`;

exports[`Tool Schema Snapshots > Tool: stage_selected_specs_and_create_atomic_commit > outputSchema JSON output should be stable 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "commitHash": {
      "description": "Git commit hash for the created commit.",
      "type": "string",
    },
    "commitMessage": {
      "description": "Final conventional-commit style message used for git commit.",
      "type": "string",
    },
    "stagedFiles": {
      "description": "Files included in the created commit.",
      "items": {
        "description": "Repository-relative path of a staged file.",
        "type": "string",
      },
      "type": "array",
    },
    "stagedSpecs": {
      "description": "Original file specs processed for staging.",
      "items": {
        "description": "Original file spec submitted by the caller.",
        "type": "string",
      },
      "type": "array",
    },
  },
  "required": [
    "commitHash",
    "commitMessage",
    "stagedFiles",
    "stagedSpecs",
  ],
  "type": "object",
}
`;

exports[`Tool Schema Snapshots Tool: check_typescript_project_for_problems inputSchema JSON output should be stable 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "checks": {
      "description": "Specific checks to run. If not provided, runs all checks: lint:fix (which modifies files), typecheck, and typecheck:scripts.",
      "items": {
        "enum": [
          "lint:fix",
          "typecheck",
          "typecheck:scripts",
        ],
        "type": "string",
      },
      "type": "array",
    },
    "files": {
      "description": "Specific files to check. If provided, scopes the linting and type checking to these files only.",
      "items": {
        "description": "File path to check",
        "type": "string",
      },
      "type": "array",
    },
    "maxOutputLength": {
      "description": "Maximum length in characters for stdout and stderr fields. If output exceeds this, it will be truncated with a [...truncated] indicator. Ignored when summaryOnly=true.",
      "maximum": 9007199254740991,
      "minimum": 1,
      "type": "integer",
    },
    "summaryOnly": {
      "description": "If true, returns only exit codes, success status, and duration per check, omitting command and output fields. Useful for reducing output verbosity.",
      "type": "boolean",
    },
    "timeout": {
      "description": "Override timeout in milliseconds. Defaults to SDK context timeout. Use this for longer operations like running comprehensive tests.",
      "maximum": 9007199254740991,
      "minimum": 1,
      "type": "integer",
    },
  },
  "type": "object",
  "~standard": {
    "jsonSchema": {
      "input": [Function],
      "output": [Function],
    },
    "validate": [Function],
    "vendor": "zod",
    "version": 1,
  },
}
`;

exports[`Tool Schema Snapshots Tool: check_typescript_project_for_problems outputSchema JSON output should be stable 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "checks": {
      "additionalProperties": {
        "anyOf": [
          {
            "additionalProperties": false,
            "properties": {
              "duration": {
                "description": "Execution time in milliseconds",
                "maximum": 9007199254740991,
                "minimum": 0,
                "type": "integer",
              },
              "exitCode": {
                "const": 0,
                "type": "number",
              },
              "success": {
                "const": true,
                "type": "boolean",
              },
            },
            "required": [
              "success",
              "exitCode",
              "duration",
            ],
            "type": "object",
          },
          {
            "additionalProperties": false,
            "properties": {
              "duration": {
                "description": "Execution time in milliseconds",
                "maximum": 9007199254740991,
                "minimum": 0,
                "type": "integer",
              },
              "exitCode": {
                "exclusiveMinimum": 0,
                "maximum": 9007199254740991,
                "type": "integer",
              },
              "stderr": {
                "description": "Standard error output from the check",
                "type": "string",
              },
              "stdout": {
                "description": "Standard output from the check",
                "type": "string",
              },
              "success": {
                "const": false,
                "type": "boolean",
              },
            },
            "required": [
              "success",
              "exitCode",
              "stdout",
              "stderr",
              "duration",
            ],
            "type": "object",
          },
        ],
      },
      "description": "Map of check results keyed by check name (lint:fix, typecheck, or typecheck:scripts). Each result includes success status, exit code, and duration. Failures include stdout/stderr for diagnostics.",
      "propertyNames": {
        "type": "string",
      },
      "type": "object",
    },
    "hasProblems": {
      "description": "True if any check failed",
      "type": "boolean",
    },
  },
  "required": [
    "hasProblems",
    "checks",
  ],
  "type": "object",
  "~standard": {
    "jsonSchema": {
      "input": [Function],
      "output": [Function],
    },
    "validate": [Function],
    "vendor": "zod",
    "version": 1,
  },
}
`;

exports[`Tool Schema Snapshots Tool: stage_selected_specs_and_create_atomic_commit inputSchema JSON output should be stable 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "commitSummary": {
      "description": "Human summary describing WHY these changes were made. This will be validated and refined into a conventional commit message.",
      "minLength": 1,
      "type": "string",
    },
    "fileSpecs": {
      "description": "List of file specs to stage. Supports whole file paths and line ranges in the format file#L10 or file#L10-L20.",
      "items": {
        "description": "File spec to stage. Supports whole file path or range: file#L10 or file#L10-L20.",
        "minLength": 1,
        "type": "string",
      },
      "minItems": 1,
      "type": "array",
    },
    "skipChecksIfHuskyPresent": {
      "default": true,
      "description": "If true (default), skips integrated quality checks when husky pre-commit hooks are configured to avoid duplicate runs. Set to false to ignore husky and run checks regardless.",
      "type": "boolean",
    },
    "skipPreStagedCheck": {
      "description": "If true, allows execution even when there are already staged changes. If false or omitted, tool fails when pre-existing staged changes are detected.",
      "type": "boolean",
    },
  },
  "required": [
    "fileSpecs",
    "commitSummary",
    "skipChecksIfHuskyPresent",
  ],
  "type": "object",
  "~standard": {
    "jsonSchema": {
      "input": [Function],
      "output": [Function],
    },
    "validate": [Function],
    "vendor": "zod",
    "version": 1,
  },
}
`;

exports[`Tool Schema Snapshots Tool: stage_selected_specs_and_create_atomic_commit outputSchema JSON output should be stable 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "commitHash": {
      "description": "Git commit hash for the created commit.",
      "type": "string",
    },
    "commitMessage": {
      "description": "Final conventional-commit style message used for git commit.",
      "type": "string",
    },
    "stagedFiles": {
      "description": "Files included in the created commit.",
      "items": {
        "description": "Repository-relative path of a staged file.",
        "type": "string",
      },
      "type": "array",
    },
    "stagedSpecs": {
      "description": "Original file specs processed for staging.",
      "items": {
        "description": "Original file spec submitted by the caller.",
        "type": "string",
      },
      "type": "array",
    },
  },
  "required": [
    "commitHash",
    "commitMessage",
    "stagedFiles",
    "stagedSpecs",
  ],
  "type": "object",
  "~standard": {
    "jsonSchema": {
      "input": [Function],
      "output": [Function],
    },
    "validate": [Function],
    "vendor": "zod",
    "version": 1,
  },
}
`;
